--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -82,6 +82,42 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.5</version>
+                <configuration>
+                    <skipTests>true</skipTests>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>main-class-placement</id>
+                        <phase>generate-resources</phase>
+                        <configuration>
+                            <target>
+                                <copy todir="src/main/resources/static">
+                                    <fileset dir="../frontend/dist/static">
+                                        <exclude name="*.html"/>
+                                    </fileset>
+                                </copy>
+                                <copy todir="src/main/resources/static">
+                                    <fileset dir="../frontend/dist">
+                                        <include name="*.html"/>
+                                        <include name="*.ico"/>
+                                    </fileset>
+                                </copy>
+                            </target>
+                        </configuration>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
