--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -8,12 +8,12 @@ logging:
 
 spring:
   datasource:
-    url: jdbc:mysql://10.100.193.82:9999/device?setUnicode=true&characterEncoding=utf8
-    # url: jdbc:mysql://192.168.50.247:3306/device?setUnicode=true&characterEncoding=utf8
+    # url: jdbc:mysql://10.100.193.82:9999/device?setUnicode=true&characterEncoding=utf8
+    url: jdbc:mysql://192.168.50.247:3306/device?setUnicode=true&characterEncoding=utf8
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
-    password: chinatsp
-    # password: root
+    # password: chinatsp
+    password: root
   jpa:
     show-sql: false
     hibernate:
