feat(goods) : 完成了商品的部分代码
Description:
   完成了商品的部分代码

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 server:
   port: 8080
-  connectionTimeout: 180000
 
 logging:
   level:
     root: info
+    com.chinatsp.device.service: debug
 
 spring:
   datasource:
