feat(swagger) : 完成接口的简单说明
Description:
  完成接口的简单说明

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -40,7 +40,7 @@ spring:
 upload_file: D:/Workspace/github/device_manage/backend/upload_file/
 
 swagger:
-  enabled: true
+  enable: true
   application-name: ${spring.application.name}
   application-version: 1.0.0
   application-description: 设备管理系统
