feat(image) : 完成缩略图的代码
Description:
   完成了缩略图的代码，并修改了后台的上传图片返回的url地址
   tips：实际项目中需要去除testUrl地址

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -26,18 +26,19 @@ spring:
       # 是否惰性处理请求，默认为false
       resolve-lazily: false
   datasource:
-    url: jdbc:mysql://10.100.193.82:9999/device?setUnicode=true&characterEncoding=utf8
-    # url: jdbc:mysql://192.168.50.247:3306/device?setUnicode=true&characterEncoding=utf8
+    # url: jdbc:mysql://10.100.193.82:9999/device?setUnicode=true&characterEncoding=utf8
+    url: jdbc:mysql://192.168.50.247:3306/device?setUnicode=true&characterEncoding=utf8
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
-    password: chinatsp
-    # password: root
+    # password: chinatsp
+    password: root
   jpa:
     show-sql: true
     hibernate:
       ddl-auto: update
 
-upload_file: D:/Workspace/github/device_manage/backend/upload_file/
+# upload_file: D:/Workspace/github/device_manage/backend/upload_file/
+upload_file: E:/Work/device_manage/backend/upload_file/
 
 swagger:
   enable: true
