--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -26,19 +26,23 @@ spring:
       # 是否惰性处理请求，默认为false
       resolve-lazily: false
   datasource:
-    url: jdbc:mysql://10.100.193.82:9999/device?setUnicode=true&characterEncoding=utf8
-    # url: jdbc:mysql://192.168.50.247:3306/device?setUnicode=true&characterEncoding=utf8
     driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://127.0.0.1:3306/device?setUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
     username: root
-    password: chinatsp
-    # password: root
+    password: root
+    # url: jdbc:mysql://10.100.193.82:9999/device?setUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
+    # username: root
+    # password: chinatsp
   jpa:
     show-sql: false
     hibernate:
       ddl-auto: update
+      naming:
+        physical-strategy: org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
+    database: mysql
 
-upload_file: D:/Workspace/github/device_manage/backend/upload_file/
-# upload_file: E:/Work/device_manage/backend/upload_file/
+# upload_file: D:/Workspace/github/device_manage/backend/upload_file/
+upload_file: E:/Work/device_manage/backend/upload_file/
 
 swagger:
   enable: false
