feat(release) : 修改版本号以及放行拦截器
Description:
  修改了版本号以及放行了index和static的拦截

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.chinatsp</groupId>
     <artifactId>device</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>device</name>
     <description>Demo project for Spring Boot</description>
 
