--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -5,8 +5,10 @@ server:
 logging:
   level:
     root: info
-    com.chinatsp.device.service: debug
-    com.chinatsp.device.controller: debug
+    com.chinatsp.device.service: info
+    com.chinatsp.device.controller: info
+    com.chinatsp.device.config: info
+    com.chinatsp.device.utils: info
 
 spring:
   application:
