--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -4,4 +4,4 @@ ENV = 'development'
 # base api
 # VUE_APP_BASE_API = '/dev-api'
 # VUE_APP_BASE_API = 'http://127.0.0.1:8080'
-VUE_APP_BASE_API = 'http://192.168.112.45:8088'
+VUE_APP_BASE_API = 'http://10.100.193.154:8080/device'
