--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -34,9 +34,9 @@ spring:
     # url: jdbc:mysql://127.0.0.1:3306/device?setUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
     # username: root
     # password: root
-    url: jdbc:mysql://10.100.193.82:9999/device?setUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
+    url: jdbc:mysql://127.0.0.1:3306/devices?setUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
     username: root
-    password: chinatsp
+    password: root
   jpa:
     show-sql: false
     hibernate:
